# cubix

./: README.md  genesis.json  index.js
cubic-chain/core/: Cargo.toml
cubic-chain/core/consensus/src/: hotstuff.rs  proposal.rs
cubic-chain/core/crypto/src/: keys.rs  lib.rs
cubic-chain/core/geometry/src/: cube.rs
cubic-chain/core/snarks/src/: key_rotation.rs  stake.rs
cubic-chain/core/src/: lib.rs
cubic-chain/extension/: manifest.json  package-lock.json  package.json  tsconfig.json
cubic-chain/extension/src/: debug.html  debug.ts  network.ts  wasm.ts
cubic-chain/extension/src/types/: cubic_chain.d.ts
cubic-chain/extension/tests/: network.test.ts
cubix-chain/: Cargo.toml
cubix-chain/data/: data.mdb  lock.mdb
cubix-chain/src/: lib.rs  main.rs
cubix-chain/src/state/: stacks.rs  stacks_example.rs
cubix-chain/tx_stack/: data.mdb  lock.mdb
cubix-js/: README.md  bun.lockb  index.js  package.json
identity/: Cargo.toml
identity/src/: aes_ctr.rs  api.rs  codec.rs  gf.rs  hash.rs  keygen.rs  lib.rs  matrix.rs  params.rs  sign.rs  solver.rs  types.rs  verify.rs
src/: crypto.rs  geometry.rs
