[package]
name = "cubix-chain"
version = "0.1.0"
edition = "2021"

[dependencies]
heed = "0.20.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
bincode = "1.3.3"
sha2 = "0.10.8"
clap = { version = "4.5.35", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
tempfile = "3.10.1"
rand = "0.8.5"
hex = "0.4.3"

[dev-dependencies]
tempfile = "3.10.1"

[[bin]]
name = "cubix-chain"
path = "src/main.rs"

[[bin]]
name = "stacks_example"
path = "src/state/stacks_example.rs"

[[example]]
name = "stacks_example"
path = "src/state/stacks_example.rs"
