[package]
name = "identity"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mayo = "*"
blake2 = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
wasm-bindgen = { version = "*", features = ["serde-serialize"] }
